feat(launcher): multi-loader runtime provisioning + .mrpack install (#281)
* feat(launcher): provision vanilla MC runtime from Mojang into shared roots

Mirror packs never receive libraries, a client jar, or game assets, so
the classpath comes out empty and launch dies on a missing launchwrapper
main class. Add RuntimeProvisioner (a sibling of JavaManagerService): it
resolves the canonical vanilla runtime -- libraries, client jar, and the
asset index + objects -- from Mojang's official CDNs into shared dataDir
roots (libraries/, assets/), so every pack of the same Minecraft version
reuses one copy instead of re-downloading per instance.

Downloads are sha1-verified and written atomically; a per-version marker
short-circuits an already-provisioned runtime so relaunch needs no
network. PlatformPaths gains the shared librariesDir / assetsDir.

Foundation only -- not yet wired into install or launch. Forge libraries
and the launch-path rework follow.

* feat(launcher): loader resolver abstraction + Forge-legacy resolver

Layer the multi-loader model on the vanilla provisioner: vanilla is the base
profile, each loader contributes an overlay, and the two merge into one runtime.

- MavenCoord: parse group:artifact:version[:classifier][@ext]; dedup key + repo path.
- LoaderResolver SPI + LoaderRegistry + LibrarySpec / LoaderProfile / ResolvedRuntime;
  mergeLibraries (the loader's version wins on a group:artifact collision).
- RuntimeProvisioner.ensureRuntime(mc, loader, version) = ensureVanilla + the loader
  overlay, merged; ensureVanilla now returns its resolved libraries.
- ForgeLegacyResolver (<=1.12.2, no install processors): reads the official
  installer's version.json overlay (launchwrapper + FMLTweaker + forge libs);
  url libs download, the bundled forge universal jar travels as bytes.

ensureVanilla no longer writes the offline marker (deferred to a robustness phase)
so it always returns the resolved library set. Not yet on the launch path.

* feat(launcher): wi